# IBL-to-nwb

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  cloud_deployment_instructions.md  conda_environment.yaml  environment.yml  ibl_depstack.txt  license.txt  pylock.toml  pyproject.toml  requirements.txt  requirements_freeze.txt  setup.py
.github/workflows/: deploy_tests_on_pull_request.yml  installation.yml  test_installation.yml  workflow.yml
AlyxToNWB/: Alyx2NWB_schema.py  alyx_to_nwb_converter.py  alyx_to_nwb_gui.py  alyx_to_nwb_metadata.py  alyx_to_nwb_schema.py
AlyxToNWB/schema/: __init__.py  alyx_subject_list.json  dataset_description_list.json  dataset_format_list.json  dataset_types.json  metafile.json  metafile.schema.json  template_metafile.schema.json
NWBToONE/nwb_to_ibl_metadata/: nwb_to_ibl_metadata.py
documentation/: ARCHITECTURE.md  GETTING_STARTED.md  README_memory_demo.md  conversion_modalities.md  dandiset_000409_file_patterns.md  how_samples2times_works.md  how_to_fetch_histology.md  ibl_passive_task.md  ibl_probe_insertion.md  ibl_probe_insertion_and_anatomical_localization.md  index.md  introduction_to_documentation.md  load_spike_sorting.md  memory_optimization_proposal.md  nidq_availability_and_timing_sources.md  reproduce_memory_issue.py  sorting_interface.md  sorting_loader_doc.md  trials_interface.md
documentation/conversion/: conversion_modalities.md  conversion_overview.md  ibl_data_interface_design.md  interface_implementations.md  introduction_to_conversion.md  path_handling.md  revisions_system.md  sorting_interface.md  trials_interface.md  understanding_revisions.md
documentation/dandi_and_aws/: introduction_to_infrastructure.md
documentation/development/: hdmf_experimental_namespace_bug.md  insertion_and_localization_status_nwb.md  introduction_to_development.md  lock_files.md  nidq_timing_details.md  pose_video_widget.md  probe_slice_visualization_guide.md  steinmetz_trouble_sessions_patch.md  troubleshooting.md  waveform_sampling_rate_bug.md  witten_trouble_session_patch.md
documentation/ibl_concepts/: brain_atlas_hierarchy_guide.md  ibl_audio_stimuli.md  ibl_wheel_data.md  is_1khz_enough_for_nidq_synch.md  one_cache_mismatch_issue.md
documentation/ibl_data_organization/: alf_data_structure.md  introduction_to_data_organization.md  revisions_system.md  waveform_data.md
documentation/ibl_science/: audio_stimuli.md  introduction_to_ibl_science.md  lick_detection.md  passive_task.md  pupil_tracking.md  roi_motion_energy.md  synchronization.md  wheel_data.md
documentation/neuropixels_2/: code_locations.md  components_needed.md  data_available.md  neuropixels_2.md
documentation/one_api_data_access/: alf_data_structure.md  data_access_overview.md  ephys_session_loader.md  index.md  introduction_to_one_api.md  one_api_revision_behavior.md  raw_data_loaders.md  session_loader.md  spike_sorting_loader.md  video_data.md
ibl_nwb/: __init__.py
ibl_nwb/AlyxToNWB/: alyx_to_nwb_converter.py
ibl_nwb/NwbToOne/: nwb_to_ibl_metadata.py
ibl_to_nwb/: __init__.py  iblconverter.py  requirements.txt
ibl_to_nwb/2023_conversions/: iblconverter.py
ibl_to_nwb/2023_conversions/repeated_site/: convert_repeated_site.py  experiment_metadata.yml  repeatedsiteconverter.py
ibl_to_nwb/AlyxToNWB/: __init__.py  alyx_to_nwb_converter.py  alyx_to_nwb_gui.py  alyx_to_nwb_metadata.py  io_tools.py
ibl_to_nwb/AlyxToNWB/schema/: __init__.py  example_metadata_output_file.json  metafile.schema.json
ibl_to_nwb/NwbToOne/: field_map.py  nwb_to_ibl_metadata.py
ibl_to_nwb/brainwide_map/: brainwidemapconverter.py  convert_brainwide_map.py  convert_brainwide_map_parallel.py  convert_brainwide_map_parallel_chunking_experiment.py  convert_brainwide_map_processed_only.py  convert_brainwide_map_processed_only_local_testing.py  convert_brainwide_map_processed_only_parallel.py  convert_brainwide_map_raw_only_parallel.py  initial_conversion_environment.txt  read_after_write.py  read_after_write_testing.py
ibl_to_nwb/datainterfaces/: __init__.py  iblposeestimationinterface.py  iblsortingextractor.py  iblsortinginterface.py  iblstreaminginterface.py  lickinterface.py
ibl_to_nwb/metadata/: ecephys.yml  pupils.yml  wheel.yml
ibl_to_nwb/old_conversion/: conda_environment.yaml  requirements.txt  setup.py
ibl_to_nwb/old_conversion/AlyxToNWB/: __init__.py  alyx_to_nwb_converter.py  alyx_to_nwb_gui.py  alyx_to_nwb_metadata.py  io_tools.py
ibl_to_nwb/old_conversion/NwbToOne/: __init__.py  field_map.py  nwb_to_ibl_metadata.py
ibl_to_nwb/old_conversion/conversion_scripts/: create_nwb_behavior.py
ibl_to_nwb/pre_2023/NwbToOne/: __init__.py
ibl_to_nwb/repeated_site/: convert_repeated_site.py  iblconverter.py  repeatedsiteconverter.py  requirements.txt
ibl_to_nwb/updated_conversion/: iblconverter.py  requirements.txt
ibl_to_nwb/updated_conversion/brainwide_map/: __init__.py  brain_wide_map_cli.py  brain_wide_map_processed_only_docker_entrypoint.py  brain_wide_map_raw_only_docker_entrypoint.py  brainwide_map_metadata.yml  brainwidemapbehaviorinterface.py  brainwidemapconverter.py  convert_brainwide_map.py  convert_brainwide_map_parallel.py  convert_brainwide_map_parallel_chunking_experiment.py  convert_brainwide_map_processed_only.py  processed_dockerfile  raw_dockerfile
ibl_to_nwb/updated_conversion/datainterfaces/: __init__.py  alfdlcinterface.py  ibllickinterface.py  iblposeestimationinterface.py  iblsortingextractor.py  iblsortinginterface.py  iblstreaminginterface.py  iblwheelinterface.py  lickinterface.py  pupiltrackinginterface.py  roimotionenergyinterface.py  streamingiblinterface.py  (+1 more)
notebooks/: bwm_usage_notebook.ipynb  neuropixels_2.ipynb  wheel_nidq_notebook.ipynb
src/ibl_to_nwb/: bwm_to_nwb.py  helpers.py  iblconverter.py  ibldandi.py  requirements.txt  tqdm_utils.py
tests/: gui_test_notebook.ipynb  ibl_sessions.schema.json  ibl_subject.schema.json  metafile.schema.json  test_ibl_converter.py  test_nwb_converter.py  utils.py
tests/NWB2IBL/: nwb_to_ibl_testscript.py  sessions_5e4a.json  subject_5e4a.json
(+207 files in other folders)
