[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project] 
name = "ibl_to_nwb"
version="0.3.0"
authors = [
  { name="Cody Baker", email="cody.c.baker.phd@gmail.com" },
]
description = "Tools to convert IBL data to NWB format.."
readme = "README.md"
keywords = ["nwb", "dandi", "ibl"]
license = {file = "license.txt"}
requires-python = ">=3.10"
dependencies = [
    "dandi>=0.73.2", # Required for DANDI_SANDBOX_API_KEY env var support
    "neuroconv>=0.9.0",
    "spikeinterface",
    "probeinterface",
    "ndx-pose>=0.2.2",
    "ONE-api",
    "iblatlas",
    "ndx-ibl",
    "ndx-events==0.2.1",
    "ibl-neuropixel",
    "ibllib",
    "ndx-anatomical-localization",
    "anywidget>=0.9.21",
    "brainglobe-atlasapi>=2.1.0",
    "brainglobe-heatmap>=0.5.5",
    "brainrender>=2.1.16",
    "matplotlib>=3.10.7",
    "pynapple>=0.10.2",
    "remfile>=0.1.13",
    "scikit-learn>=1.7.2",
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "License :: OSI Approved :: BSD License",
]

[tool.uv.sources]
# neuroconv = {git = "https://github.com/catalystneuro/neuroconv", branch = "main"}
neuroconv = {path = "../../work_repos/neuroconv", editable = true}
ibl-neuropixel = {git = "https://github.com/int-brain-lab/ibl-neuropixel", branch = "main"}
ibllib = {git = "https://github.com/int-brain-lab/ibllib", branch = "NWB_conversion" }
ndx-anatomical-localization = {git = "https://github.com/catalystneuro/ndx-anatomical-localization", branch = "main"}
ndx-ibl = {git = "https://github.com/catalystneuro/ndx-ibl", branch = "main"}


[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''



[tool.ruff]
exclude = [
  "*/__init__.py"
]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "I", "UP031", "UP032"]
ignore = [
    "PTH123",
    "D203",
    "D212",
    "T201",
    "FIX002",
    "TD003",
    "TD002",
    "S101",
    "ICN001",
    "INP001",
    "E501",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["ibl_to_nwb"]

[dependency-groups]
dev = [
    "allensdk>=0.16.3",
    "ipykernel>=7.1.0",
]
