[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project] 
name = "ibl_to_nwb"
version="0.3.0"
authors = [
  { name="Cody Baker", email="cody.c.baker.phd@gmail.com" },
]
description = "Tools to convert IBL data to NWB format.."
readme = "README.md"
keywords = ["nwb", "dandi", "ibl"]
license = {file = "license.txt"}
# Upper bound needed because compiled dependencies (e.g., h5py) don't have Python 3.14 wheels yet
requires-python = ">=3.10,<3.14"
dependencies = [
    "dandi>=0.73.2", 
    "neuroconv>=0.9.0",
    "pynwb",
    "hdmf",
    "hdmf-zarr",
    "spikeinterface>=0.103.2",
    "probeinterface",
    "ndx-pose>=0.2.2",
    "ONE-api",
    "iblatlas",
    "ndx-ibl",
    "ndx-events==0.2.1",
    "ibl-neuropixel",
    "ibllib",
    "ndx-anatomical-localization",
    "anywidget>=0.9.21",
    "brainglobe-atlasapi>=2.1.0",
    "brainglobe-heatmap>=0.5.5",
    "brainrender>=2.1.16",
    "matplotlib>=3.10.7",
    "pynapple>=0.10.2",
    "remfile>=0.1.13",
    "scikit-learn>=1.7.2",
    "nwb-video-widgets[dandi]>=0.1.2",
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "License :: OSI Approved :: BSD License",
]

[tool.uv.sources]
# neuroconv = {git = "https://github.com/catalystneuro/neuroconv", branch = "improve_unit_table_performance"}
#neuroconv = {path = "../../work_repos/neuroconv", editable = true}
# hdmf = {git = "https://github.com/h-mayorquin/hdmf", branch = "ragged_writing_optimization"}
pynwb = {git = "https://github.com/NeurodataWithoutBorders/pynwb", branch = "dev"}
# pynwb = {path = "../../work_repos/pynwb", editable = true}
# hdmf-zarr = {git = "https://github.com/hdmf-dev/hdmf-zarr", branch = "dev"}
# hdmf-zarr = {path = "../../work_repos/hdmf-zarr", editable = true}
# spikeinterface from main: includes fix for inter_sample_shift IndexError with
# non-contiguous snsSaveChanSubset on NP 2.4 probes (PR #4317, not yet released).
# Can switch back to PyPI once a release > 0.103.2 is published.
spikeinterface = {git = "https://github.com/SpikeInterface/spikeinterface", branch = "main"}
# spikeinterface = {path = "../../work_repos/spikeinterface", editable = true}
ibl-neuropixel = {git = "https://github.com/int-brain-lab/ibl-neuropixel", branch = "main"}
ibllib = {git = "https://github.com/int-brain-lab/ibllib", branch = "NWB_conversion" }
ndx-anatomical-localization = {git = "https://github.com/catalystneuro/ndx-anatomical-localization", branch = "main"}
ndx-ibl = {git = "https://github.com/catalystneuro/ndx-ibl", branch = "main"}
# nwb-video-widgets = {path = "/home/heberto/development/nwb-video-widgets", editable = true}


[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''



[tool.ruff]
exclude = [
  "*/__init__.py"
]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "I", "UP031", "UP032"]
ignore = [
    "PTH123",
    "D203",
    "D212",
    "T201",
    "FIX002",
    "TD003",
    "TD002",
    "S101",
    "ICN001",
    "INP001",
    "E501",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["ibl_to_nwb"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
